Finished 1 Peter2:4-10 questions.

--- a/bible/1Peter2:4-10.tex
+++ b/bible/1Peter2:4-10.tex
@@ -1,48 +1,91 @@
 \documentclass[12pt]{article}
+\newcommand{\answerbox}{\vspace{1cm}}
 \begin{document}
 \part*{1 Peter 2:4-10}
-% Instructions:
-% Answer the questions below based on
+Please answer the following questions.
+We will discuss them at Bible Study.
 \begin{enumerate}
-\section*{The analogy (4-5)}
+\section*{The analogy (4-6)}
 \item How do verses 4-5 describe the following relationships?
     \begin{enumerate}
     \item Jesus and God the Father
+        \answerbox
     \item Jesus and unbelievers
+        \answerbox
     \item Jesus and believers
+        \answerbox
     \end{enumerate}
-\item Chief cornerstone: In the ancient Middle-Eastern world,
+\item Chief cornerstone, read also verse 6: In the ancient Middle-Eastern world,
     the cornerstone was the first stone laid in the building process,
     determining the position and alignment of the rest of the structure.
     \begin{enumerate}
     \item What is the spiritual house, for which Jesus is the chief cornerstone?
         See also Ephesians 2:19-22.
+        \answerbox
     \item What is the purpose of this house?
         What is the earthly house that is analogous to this spiritual house?
+        \answerbox
     \item In what ways does Jesus serve as chief cornerstone 
         to this spiritual house?
         Read Colossians 1:15-18, Ephesians 4:15-16, and Revelation 2:12-20
         as well.
+        \answerbox
     \end{enumerate}
 \item How does Jesus' relationship with unbelievers determine
-    how we live in the world?
+        our relationship with the world?
+    How does this affect how we live in the world?
+        \answerbox
+
 \section*{The testimony of Scripture (6-8)}
 \item What does it mean, as quoted in verse 6, that 
         believers will not ``be put to shame''?
     What effect does meditating on this truth have on the believer,
         as described in verse 7?
+        \answerbox
 \item Evaluate the value you place on knowing and obeying Jesus Christ,
         compared to that placed on other objects and pursuits in your life.
     How must you change, in order to rightly live
         in light of what God has done for you in Jesus Christ?
+        \answerbox
 \item Verse 8 describes Jesus as a source of stumbing and offense
     to unbelievers.
     \begin{enumerate}
-    \item How did Jesus cause of stumbling and offense 
+    \item How was Jesus a cause of stumbling and offense 
             for both the Jews and the Greeks of that time?
-        See 1 Corinthians 1:23.
+        See also 1 Corinthians 1:23.
+        \answerbox
     \item In what ways is Jesus an offense and stumbling block to our culture?
+        \answerbox
     \end{enumerate}
 \section*{The appointments (8-10)}
+\item What is the ultimate reason why unbelievers stumble
+        on the rock that is Jesus Christ?
+    See also Romans 9:14-24.
+        \answerbox
+\item In contrast, according to verses 9 and 10, 
+        to what end have believers been called to?
+        \answerbox
+\item Define the following terms found in verse 9.
+    In what way has God made us to be these things?
+    Give a supporting verse for each.
+   \begin{enumerate}
+   \item a chosen generation
+        \answerbox
+   \item a royal priesthood
+        \answerbox
+   \item a holy nation
+        \answerbox
+   \item His own special people
+        \answerbox
+   \end{enumerate}
+\item How must our day-to-day living be determined by
+        who God has made us in Jesus Christ, 
+        as seen in the previous question?
+        \answerbox
+\item Relate this study (verses 4-10) back to the theme of this section
+        of 1 Peter, which is holiness.
+    Specifically, how do these verses fit in with the command 
+        given in 1 Peter 1:14-16?
+        \answerbox
 \end{enumerate}
 \end{document}
