--- a/bible/1Peter1:14-2:12.tex
+++ b/bible/1Peter1:14-2:12.tex
@@ -1,4 +1,6 @@
-\documentclass[12pt]{article}
+\documentclass{article}
+\usepackage{fullpage}
+\newcommand{\answerbox}{\vspace{1.5cm}}
 \newcommand{\BE}{\begin{enumerate}}
 \newcommand{\EE}{\end{enumerate}}
 \newcommand{\I}{\item}
@@ -15,41 +17,131 @@ Be prepared to share, encourage, and strengthen others
 \section*{1 Peter 1:14-16}
 \I  What does Peter command us \emph{not to} do,
         and what does Peter command us \emph{to} do in these verses?
+    \answerbox
 \I  What is the fundamental reason why we are to obey this command?
     How does this relate to being his obedient children (v. 14)?
     See also Leviticus 11:44-45, 19:2, 20:7.
+    \answerbox
 \I  Application:
     \BE
     \I  Identify the area of your life which continues most to be conformed
             to a past pattern of sin.
+    \answerbox
     \I  What is the root desire (i.e. lust) that drives you to sin in this way?
-    \I  Consider Jesus, who was tempted in the same way (Hebrews 4:15).
-        Search the Scripture and find how He overcame such temptation, 
-            give verses.
+    \answerbox
+    \I  Consider Jesus, who was tempted in the same way, yet without sin 
+            (Hebrews 4:15).
+        Search the Scripture and find how He overcame such temptation.
+        Give verses.
+    \answerbox
     \I  What is the one change in your life 
             with which you can most effectively overcome this temptation?
         Consider Jesus' example from your previous answer.
+    \answerbox
     \I  Write down one Scripture that you will memorize and use to 
             fight temptation when tempted in this area.
+    \answerbox
     \EE
 \section*{1 Peter 1:17-21}
 \I  What is the command that we are given in these verses?
     Explain what it means, and write down the command using your own words.
-\I  What are the two motivations Peter gives us, to help us to obey the command?
+    \answerbox
+\I  What are the two motivations Peter gives us, to help us in obeying the command?
+    \answerbox
 \I  Why is Jesus' blood so precious? Give verses.
+    \answerbox
 \I  Read 1 Corinthians 3:11-15, which speaks of God's judging of believers.
     \BE
     \I  Prayerfully evaluate your Christian life up to this point.
         In what areas have you built with gold, silver, and precious stones?
         In what areas have you built with wood, hay, and straw?
-    \I  Choose an area that you feel would be burned up in the fires of testing.
+    \answerbox
+    \I  Choose an area that you feel would be ``burned up'' 
+            if tested at this moment.
         Write down a verse to remember that teaches what God's will for you is
             in this area of your life.
+        How can you start building with gold, silver, and precious stones 
+            in this area?
+    \answerbox
     \EE
-    
 \section*{1 Peter 1:22-25}
+\I  What are we commanded to do in these verses?
+    How is holiness related to this command?
+    \answerbox
+\I  From these verses, how do we prepare ourselves to obey this command?
+    Also, how has God prepared us to obey this command?
+    \answerbox
+\I  What do these verse tell us about the work that God's word 
+        has accomplished in our lives?
+    Read Psalm 19:7-11, in what other ways does the Word transform a believer?
+    \answerbox
+\I  Application:
+    \BE
+    \I  What impurity in your own life most prevents you from 
+            fervently loving others?
+    \answerbox
+    \I  In what ways would your love for the brethren be enhanced or increased
+            if this impurity was no longer present in your life?
+    \answerbox
+    \I  How can others pray for you to this end?
+        Share this prayer request with a brother or sister,
+            and ask them to pray for you in this regard.
+    \answerbox
+    \EE
 \section*{1 Peter 2:1-10}
+\I  What pair of commands are we given in these verses?
+    How are these commands related to one another?
+    \answerbox
+\I  In your own words, explain what Peter means when he says
+        that we are to desire the Word as newborn babes.
+    What is the purpose that this is to accomplish in our lives?
+    \answerbox
+\I  What do we learn about our growth from these verses?
+    Specifically, what are we growing into,
+        what is the end purpose of this growth, and
+        what has God accomplished on our behalf in order to make this possible?
+    \answerbox
+\I  What reason does 1 Peter 2:3 give us to obey the commands presented 
+        in this section? 
+    How have you personally experienced this in a deep and profound way 
+        in your lifetime?
+    See also Psalm 34:8.
+    \answerbox
 \section*{1 Peter 2:11-12}
+\I  What pair of commands are we given in these verses?
+    \answerbox
+\I  What are fleshly lusts, and what specific tactics do they use 
+        to attack our own souls?
+    See also James 4:1.
+    \answerbox
+\I  How will our good deeds cause unbelievers to glorify God
+        in the day of visitation?
+    See also 1 Peter 1:6-7.
+    \answerbox
+\I  Define the term ``sojourners and pilgrims''.
+    \answerbox
+    \BE
+    \I  In what ways are we spiritual pilgrims in this world? Give verses.
+    \answerbox
+    \I  What are the objectives that a sojourner is to pursue, and 
+            how are they different from the objective that 
+            someone who dwells in the land pursues?
+        How does this relate to the war that fleshly lusts wage
+            against the soul of the sojourner?
+    \answerbox
+    \I  Evaluate how you use your time and resources.
+        What have you put your hope in?
+        Are you living as one who is passing through this world,
+            or one who is trying to settle down in this world?
+    \answerbox
+    \I  Choose one area of our life where you are not living as a 
+            spiritual pilgrim.
+        Find and write down a Scripture that speaks either of
+            the futility of this pursuit as one who dwells in the world, or
+            the great reward of submitting to God's will in this area,
+            as a spiritual pilgrim.
+    \answerbox
+    \EE
 \EE
 \end{document}
 
