Updated Rev 1:1-3 sermon.

--- a/sermons/Revelation1:1-3.tex
+++ b/sermons/Revelation1:1-3.tex
@@ -2,8 +2,10 @@
 \newcommand{\BI}{\begin{itemize}}
 \newcommand{\EI}{\end{itemize}}
 \newcommand{\I}{\item}
+\newcommand{\Q}[1]{\begin{quote} #1 \end{quote}}
 \begin{document}
 \part*{Revelation 1:1-3 --- The Revelation of Jesus Christ}
+\tableofcontents
 \BI
 \section*{Notes}
 \I  The point of this sermon is:
@@ -21,11 +23,85 @@ In this light, the goal of this sermon is to place a burden on the hearers
 
 \section*{Introduction}
 \section{The Nature of the Revelation of Jesus Christ}
-\subsection{What is it about?}
-\I The subject of Revelation is Jesus Christ.
+\subsection{Who does it reveal?}
+\I The book of Revelation reveals Jesus Christ.
+\subsubsection{He is God}
+\I Rev 1:11 \Q{``I am the Alpha and the Omega, the First and the Last.''}
+\I Rev 1:17 \Q{``Do not be afraid, I am the First and the Last.''}
+\I Rev 22:13 \Q{``I am the Alpha and the Omega, the Beginning and the End, 
+                the First and the Last.''}
+\I Rev 1:13 \Q{\ldots and in the midst of the seven lampstands One 
+                like the Son of Man, \ldots}
+\I Rev 3:1, 5:6
+            \Q{``These things says He who has the seven Spirits of God 
+                and the seven stars: \ldots''}    
+            \Q{And I looked, and behold, in the midst of the throne 
+                and of the four living creatures, 
+                and in the midst of the elders, 
+                stood a Lamb as though it had been slain, 
+                having seven horns and seven eyes, 
+                which are the seven Spirits of God sent out into all the earth.}
+\I Rev 3:14 \Q{``These things says the Amen, the Faithful and True Witness,
+                the Beginning of the creation of God; \ldots}
+\I Rev 22:16 \Q{``I, Jesus, have sent My angel to testify to you these things 
+                in the churches, I am the Root and the Offspring of David, 
+                the Bright and Morning Star.''}
+\I Rev 1:16 \Q{\dots and His countenance was like the sun shining 
+                in its strength.}
+
+\subsubsection{He is the Savior}
+\I Rev 1:5 \Q{To Him who loved us and washed us from our sins 
+                in His own blood, \ldots}
+\I Rev 1:18 \Q{I am He who lives, and was dead, and behold, 
+                I am alive forevermore.}
+\I Rev 5:6 \Q{And I looked, and behold, in the midst of the throne
+                and of the four living creatures, and in the midst of the
+                elders, stood a Lamb as though it had been slain, \ldots}
+\I Rev 13:8 \Q{All who dwell on the earth will worship him [the beast], 
+                whose names have not been written in the Book of Life
+                of the Lamb who was slain from the foundation of the world.}
+\I Rev 5:9 \Q{``You are worthy to take the scroll, \\
+                And to open its seals; \\
+                For You were slain, \\
+                And have redeemed us to God by Your blood \\
+                Out of every tribe and tongue and people and nation, \ldots''}
+\I Rev 5:12 \Q{``Worthy is the Lamb who was slain \\
+                To receive power and riches and wisdom, \\
+                And strength and honor and glory and blessing!''}
+\I Rev 5:13 \Q{``Blessing and honor and glory and power \\
+                Be to Him who sits on the throne, \\
+                And to the Lamb, forever and ever!''}
+\I Rev 5:5 \Q{``Do not weep. Behold, the Lion of the tribe of Judah,
+                the Root of David, has prevailed to open the scroll 
+                and to loose its seven seals.''}
+\I Rev 3:7 \Q{``He who has the key of David, He who opens and no one shuts, 
+                and shuts and no one opens.''}
+\I Rev 1:18 \Q{``And I have the keys of Hades and of Death.''}
+\I Rev 19:7 \Q{``Let us be glad and rejoive and give Him glory,
+                for the marriage of the Lamb has come,
+                and His wife has made herself ready.''}
+\I Rev 7:17 \Q{``for the Lamb who is in the midst of the throne 
+                will shepherd them and lead them to living fountains of waters.
+                And God will wipe away every tear from their eyes.''}
+\I Rev 21:22-23 \Q{But I saw no temple in it, for the Lord God Almighty 
+                and the Lamb are its temple. The city had no need 
+                of the sun or of the moon to shine in it, 
+                for the glory of God illuminated it. The Lamb is its light.}
+\I Rev 22:1-2 \Q{And he showed me a pure river of water of life, 
+                clear as crystal, proceeding from the throne of God 
+                and of the Lamb. In the middle of its street, and on either
+                of the river, was the tree of life, which bore twelve fruits,
+                each tree yielding its fruit every month. 
+                The leaves of the tree were for the healing of the nations.}
+\I Rev 22:3-4 \Q{And there shall be no more curse, but the throne of God
+                and of the Lamb shall be in it, and His servants shall 
+                serve Him. They shall see His face, and His name shall be on
+                their foreheads.}
+                    
+\subsubsection{He is King}
 \subsection{Who is it from?}
 \subsection{What is its purpose?}
-\subsection{Who is it for?}
+\subsection{Who is it to?}
 \subsection{What is its focus?}
 
 \section{The Authority of the Revelation of Jesus Christ}
